--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
+    "mongodb": "^6.10.0",
     "next": "16.0.3",
+    "openai": "^4.57.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "mongodb": "^6.10.0",
     "zod": "^3.23.8",
-    "openai": "^4.57.0",
-    "lucide-react": "^0.469.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
